feat: add hardening script for Leaflet version exposure and implement Go server for API gateway with security headers
- Introduced a new script to replace Leaflet version references in built artifacts with a placeholder to enhance security.
- Created a Go server that acts as a reverse proxy to the backend, implementing security headers and handling error responses.
- Added Postman collection for testing the complete flow of the application, including security checks and user interactions.